# ETL-S2T-Parser

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  S2T-700-КЮЛ_v5.xlsx  S2T_308_000046_v0.39.xlsx  agent.py  app.py  data_loader.py  db_storage.py  langfuse_setup.py  load_skills_tools.py  pyproject.toml  pytest.ini  s2t_sbrf_pprb_305000042_dul_b_t_v049.xlsx  schema_matcher.py  skills.md  summarizer.py  summarizer_agent.py  tools.md
templates/: index.html
tests/: conftest.py  test_agent.py  test_app.py  test_db_storage.py  test_helper.py  test_schema_matcher.py  test_summarizer_agent.py
