[project]
name = "etl-mapping-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.14",
    "langchain-gigachat>=0.5.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.4",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "uvicorn>=0.42.0",
    "openpyxl",
    "flask>=3.1.3",
    "xlrd>=2.0.2",
    "gigachat>=0.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "langfuse>=4.2.0",
    "openinference-instrumentation-langchain>=0.1.62",
]
